# cookiecutter-django-base

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .env.compose  .gitignore  Dockerfile  README.md  compose.yml  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yaml
{{ cookiecutter.project_slug }}/apps/: conftest.py
{{ cookiecutter.project_slug }}/config/: asgi.py  celery_app.py  urls.py
{{ cookiecutter.project_slug }}/config/settings/: base.py  dev.py  prod.py  test.py
{{ cookiecutter.project_slug }}/config/utils/: __init__.py  is_docker.py
{{ cookiecutter.project_slug }}/locale/fr_FR/LC_MESSAGES/: django.po
{{ cookiecutter.project_slug }}/locale/pt_BR/LC_MESSAGES/: django.po
