[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "django>=5.1",
    "django-environ>=0.12.0",
    "django-csp>=4.0b2",
    "django-prometheus>=2.3.1",
    "django-redis>=5.4.0",
    "django-anymail>=12.0",
    "django-csp>=4.0b2",
    "django-model-utils>=5.0.0",
    "django-storages[s3,boto3]>=1.14.4",
    "django-click>=2.4.0",
    "django-dbbackup>=4.2.1",
    "django-celery-beat>=2.7.0",
    "django-compressor>=4.5.1",
    "gunicorn>=23.0.0",
    "hiredis>=3.1.0",
    "psycopg[binary,pool]>=3.2.4",
    "redis>=5.2.1",
    "sentry-sdk>=2.19.2",
    "uvicorn-worker>=0.3.0",
    "uvicorn[standard]>=0.34.0",
    "whitenoise>=6.8.2",
    "argon2-cffi>=23.1.0",
    "bcrypt>=4.2.1",
    "brotli>=1.1.0",
    "celery>=5.4.0",
    "flower>=2.0.1"
]

[dependency-groups]
dev = [
    "django-coverage-plugin>=3.1.0",
    "django-fakery>=4.1.3",
    "django-stubs[compatible-mypy]>=5.1.1",
    "django-zeal>=2.0.2",
    "django-browser-reload>=1.17.0",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "coverage>=7.6.10",
    "djlint>=1.36.4",
    "factory-boy>=3.3.1",
    "ipdb>=0.13.13",
    "mypy>=1.13.0",
    "pylint>=3.3.3",
    "pylint-django>=2.6.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.1",
    "werkzeug[watchdog]>=3.1.3",
    "watchfiles>=1.0.4",
]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["apps/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true
